@@ -1,3 +1,14 @@
+2020-11-04  Diego Pino Garcia  <dpino@igalia.com>
+
+        [GTK] Unreviewed test gardening. Update expectations of flaky text failures.
+
+        The updated tests have been failing consistently for the last 4000 revisions.
+        A few tests are actually passing now, after emiting a new baseline.
+
+        * platform/gtk/TestExpectations:
+        * platform/gtk/imported/w3c/web-platform-tests/content-security-policy/reporting/report-only-in-meta.sub-expected.txt: Added.
+        * platform/gtk/imported/w3c/web-platform-tests/service-workers/service-worker/clients-matchall-client-types.https-expected.txt: Added.
+
 2020-11-04  Eric Carlson  <eric.carlson@apple.com>
 
         Transparent video poster image doesn't keep element transparent once first frame is preloaded
